# test_payflow

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.consumer  README.md  alembic.ini  consumer_main.py  docker-compose.yml  pyproject.toml
app/: main.py
app/application/interfaces/: payment_repo.py
app/application/services/: payment_processor.py
app/application/use_cases/: create_payment.py  get_payment.py
app/core/: config.py
app/domain/: entities.py  exceptions.py  value_objects.py
app/infrastructure/broker/: consumer.py  publisher.py
app/infrastructure/db/: database.py  models.py  unit_of_work.py
app/infrastructure/db/repositories/: outbox_repo.py  payment_repo.py
app/infrastructure/http/: webhook_sender.py
app/infrastructure/outbox/: processor.py
app/presentation/api/v1/: dependencies.py  payments.py
app/presentation/schemas/: payment.py
migrations/: env.py
migrations/versions/: 2026_06_21_1441_c3feed4ff50a_create_payments_and_outbox_tables.py
tests/: factories.py
tests/integration/: conftest.py  test_payment_repository.py
tests/unit/: test_consumer.py  test_create_payment.py  test_dependencies.py  test_get_payment.py  test_outbox_processor.py  test_payment_processor.py  test_publisher.py  test_router.py  test_webhook_sender.py
